
package mysql;

message tb_role_auto_raid{
    required uint32 role_id = 1;
    required bytes info = 2;
}
